删除JCODEC