@@ -6,7 +6,7 @@
 
     <groupId>com.QYun</groupId>
     <artifactId>SuperSpineViewer</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5</version>
     <repositories>
         <repository>
             <id>sonatype</id>
@@ -100,16 +100,6 @@
             <version>15.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.jcodec</groupId>
-            <artifactId>jcodec</artifactId>
-            <version>0.2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jcodec</groupId>
-            <artifactId>jcodec-javase</artifactId>
-            <version>0.2.5</version>
-        </dependency>
-        <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
             <version>9.0.10</version>
@@ -149,10 +139,6 @@
                 <version>3.8.1</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--module-path</arg>
-                        <arg>C:\Users\SoarT\scoop\apps\gluon-openjfx-sdk\current\lib</arg>
-                        <arg>--add-modules</arg>
-                        <arg>javafx.controls,javafx.fxml</arg>
                         <arg>--add-reads</arg>
                         <arg>javafx.graphics=ALL-UNNAMED</arg>
                         <arg>--add-exports</arg>
